--- a/app/src/main/res/layout/layout_offers_banner.xml
+++ b/app/src/main/res/layout/layout_offers_banner.xml
@@ -2,9 +2,10 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_margin="10dp"
+    android:id="@+id/offers_card_view"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardCornerRadius="4dp"
-    android:layout_height="240dp">
+    android:layout_height="210dp">
 
     <RelativeLayout
         android:layout_width="match_parent"
