--- a/app/src/main/res/layout/layout_restaurants_card.xml
+++ b/app/src/main/res/layout/layout_restaurants_card.xml
@@ -49,6 +49,7 @@
                 android:layout_width="wrap_content"
                 android:layout_marginStart="2dp"
                 android:fontFamily="@font/raleway"
+                android:layout_marginBottom="2dp"
                 android:text="Yelahanka, North Bangalore"
                 android:layout_below="@id/restaurant_name"
                 android:textColor="#5b5b5b"
@@ -60,6 +61,7 @@
                 android:id="@+id/price_for_two_of_restaurant"
                 android:layout_below="@id/city_name_and_zone"
                 android:layout_marginStart="3dp"
+                android:layout_marginTop="2dp"
                 android:text="\u20B9 2000"
                 android:fontFamily="@font/raleway"
                 android:textSize="11sp"
