--- a/app/src/main/res/layout/content_user_feed.xml
+++ b/app/src/main/res/layout/content_user_feed.xml
@@ -15,6 +15,7 @@
             android:layout_height="wrap_content">
 
             <android.support.v7.widget.RecyclerView
+                android:layout_margin="5dp"
                 android:id="@+id/offers_recycler_view"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
@@ -38,6 +39,7 @@
                     android:layout_height="wrap_content" />
 
                 <View
+                    android:layout_marginTop="2dp"
                     android:layout_width="wrap_content"
                     android:background="#b4b4b4"
                     android:layout_centerVertical="true"
@@ -47,6 +49,7 @@
             </RelativeLayout>
 
             <android.support.v7.widget.RecyclerView
+                android:layout_margin="5dp"
                 android:theme="@style/RecyclerTheme"
                 android:id="@+id/popular_restaurants_recycler"
                 android:layout_below="@id/top_restaurants"
@@ -72,6 +75,7 @@
                     android:layout_height="wrap_content" />
 
                 <View
+                    android:layout_marginTop="2dp"
                     android:layout_width="wrap_content"
                     android:background="#d6d6d6"
                     android:layout_centerVertical="true"
@@ -83,6 +87,7 @@
             <in.restroin.restroin.utils.MyGridView
                 android:gravity="center"
                 android:numColumns="3"
+                android:nestedScrollingEnabled="false"
                 android:layout_margin="6dp"
                 android:verticalSpacing="6dp"
                 android:id="@+id/cusines_gridView"
@@ -92,7 +97,40 @@
 
             </in.restroin.restroin.utils.MyGridView>
 
+            <RelativeLayout
+                android:layout_margin="10dp"
+                android:layout_below="@id/cusines_gridView"
+                android:id="@+id/popular_locations_intro"
+                android:layout_width="match_parent"
+                android:layout_height="24dp">
 
+                <TextView
+                    android:id="@+id/popular_locations_around"
+                    android:layout_width="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:textColor="#000"
+                    android:textStyle="bold"
+                    android:text="Special Locations"
+                    android:layout_height="wrap_content" />
+
+                <View
+                    android:layout_marginTop="2dp"
+                    android:layout_width="wrap_content"
+                    android:background="#d6d6d6"
+                    android:layout_centerVertical="true"
+                    android:layout_toEndOf="@id/popular_locations_around"
+                    android:layout_height="1dp" />
+
+            </RelativeLayout>
+
+            <android.support.v7.widget.RecyclerView
+                android:layout_margin="5dp"
+                android:layout_below="@+id/popular_locations_intro"
+                android:id="@+id/popular_locations_recycler"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+            </android.support.v7.widget.RecyclerView>
 
         </RelativeLayout>
 
