--- a/app/src/main/res/layout/layout_popular_locations.xml
+++ b/app/src/main/res/layout/layout_popular_locations.xml
@@ -1,6 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="260dp">
+<android.support.v7.widget.CardView android:layout_margin="5dp"
+    app:cardCornerRadius="4dp"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="320dp"
+    android:layout_height="160dp"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:scaleType="centerCrop"
+            android:src="@mipmap/restro20"
+            android:layout_height="match_parent" />
+        <RelativeLayout
+            android:background="@drawable/dark_slant_background"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <RelativeLayout
+                android:layout_margin="5dp"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentBottom="true"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:text="Yelahanka"
+                    android:textStyle="bold"
+                    android:id="@+id/popular_location"
+                    android:fontFamily="@font/raleway"
+                    android:textColor="#fff"
+                    android:textSize="19sp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+
+                <RatingBar
+                    android:layout_width="wrap_content"
+                    android:rating="4"
+                    android:numStars="5"
+                    android:id="@+id/popular_location_rating"
+                    android:layout_below="@id/popular_location"
+                    style="@style/Widget.AppCompat.RatingBar.Small"
+                    android:layout_height="wrap_content" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:id="@+id/total_restaurants_in_location"
+                    android:text="2503+ restaurants"
+                    android:textColor="#fff"
+                    android:fontFamily="@font/raleway"
+                    android:textStyle="bold"
+                    android:layout_below="@id/popular_location_rating"
+                    android:layout_height="wrap_content" />
+
+            </RelativeLayout>
+
+
+        </RelativeLayout>
+
+    </RelativeLayout>
 
 </android.support.v7.widget.CardView>
