--- a/app/src/main/res/drawable/dark_slant_background.xml
+++ b/app/src/main/res/drawable/dark_slant_background.xml
@@ -17,7 +17,7 @@
                     android:angle="90"
                     android:startColor="#ef1a1a1a"
                     android:centerColor="#d0232323"
-                    android:endColor="#00 3e3e3e">
+                    android:endColor="#003e3e3e">
 
                 </gradient>
 
