--- a/app/src/main/res/layout/layout_popular_locations.xml
+++ b/app/src/main/res/layout/layout_popular_locations.xml
@@ -13,6 +13,7 @@
         <ImageView
             android:layout_width="match_parent"
             android:scaleType="centerCrop"
+            android:id="@+id/popular_location_image"
             android:src="@mipmap/restro20"
             android:layout_height="match_parent" />
         <RelativeLayout
