Added New Activity for restaurant View

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,7 @@
     <color name="colorPrimary">#ff5833</color>
     <color name="colorPrimaryDark">#f3b73400</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="button_pressed">#fff</color>
+    <color name="button_focused">#fff</color>
+    <color name="button_default">#fff</color>
 </resources>
