--- a/app/src/main/res/layout/layout_amenity_view.xml
+++ b/app/src/main/res/layout/layout_amenity_view.xml
@@ -1,17 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
+    android:layout_margin="5dp"
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 
     <ImageView
-        android:layout_width="15dp"
+        android:layout_width="20dp"
         android:id="@+id/amenity_image"
         android:src="@drawable/ic_done"
-        android:layout_height="15dp" />
+        android:layout_height="20dp" />
 
     <TextView
         android:layout_width="wrap_content"
-        android:textSize="12sp"
+        android:textSize="14sp"
         android:layout_marginStart="2dp"
         android:layout_toEndOf="@id/amenity_image"
         android:text="Air Conditioner"
