--- a/app/src/main/res/layout/content_restaurant_view.xml
+++ b/app/src/main/res/layout/content_restaurant_view.xml
@@ -300,6 +300,12 @@
                 android:layout_height="300dp"
                 android:layout_margin="10dp">
 
+                <com.github.mikephil.charting.charts.PieChart
+                    android:layout_width="match_parent"
+                    android:id="@+id/chart"
+                    android:layout_height="300dp">
+
+                </com.github.mikephil.charting.charts.PieChart>
 
             </RelativeLayout>
 
