--- a/app/src/main/res/layout/layout_restaurant_image.xml
+++ b/app/src/main/res/layout/layout_restaurant_image.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="wrap_content">
 
     <ImageView
@@ -7,6 +8,6 @@
         android:src="@mipmap/restro20"
         android:scaleType="fitXY"
         android:id="@+id/restaurant_image"
-        android:layout_height="240dp" />
+        android:layout_height="200dp" />
 
 </android.support.v7.widget.CardView>
