--- a/app/src/main/res/layout/layout_dates_view.xml
+++ b/app/src/main/res/layout/layout_dates_view.xml
@@ -1,26 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView android:background="#bfbfbf"
+<android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="140dp"
+    app:cardElevation="2dp"
+    android:layout_margin="5dp"
+    app:cardCornerRadius="4dp"
     android:layout_height="100dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <RelativeLayout
+        android:id="@+id/date_select_cardView"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+        <ImageView
+            android:layout_width="wrap_content"
+            android:src="@mipmap/back"
+            android:id="@+id/background_image"
+            android:scaleType="fitXY"
+            android:layout_height="wrap_content" />
 
         <in.restroin.restroin.utils.SmoothCheckBox
             android:layout_width="30dp"
+            android:layout_marginStart="5dp"
+            android:layout_marginTop="5dp"
             app:color_checked="@color/colorPrimary"
             android:id="@+id/date_smooth_checkbox"
             android:layout_height="30dp" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:id="@+id/date_of_booking_choose"
-            android:text="21-Aug"
-            android:layout_below="@id/date_smooth_checkbox"
-            android:layout_height="wrap_content" />
+        <RelativeLayout
+            android:layout_marginEnd="-2dp"
+            android:layout_marginBottom="-2dp"
+            android:layout_marginStart="-2dp"
+            android:background="@drawable/dark_bottom_background"
+            android:layout_alignParentBottom="true"
+            android:layout_width="match_parent"
+            android:layout_height="50dp">
+
+            <TextView
+                android:layout_centerInParent="true"
+                android:textColor="#fff"
+                android:fontFamily="@font/raleway"
+                android:textSize="19sp"
+
+                android:layout_width="wrap_content"
+                android:id="@+id/date_of_booking_choose"
+                android:text="21-Aug"
+                android:layout_height="wrap_content" />
+
+        </RelativeLayout>
+
 
     </RelativeLayout>
 
