--- a/app/src/main/res/layout/activity_restaurant_view.xml
+++ b/app/src/main/res/layout/activity_restaurant_view.xml
@@ -12,10 +12,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
             <FrameLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
@@ -29,30 +25,21 @@
                             android:id="@+id/app_bar"
                             android:layout_width="match_parent"
                             android:layout_height="250dp"
-                            android:fitsSystemWindows="true"
                             android:theme="@style/AppTheme.AppBarOverlay">
-
-                            <RelativeLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content">
-
-                                <android.support.v7.widget.RecyclerView
+                            <android.support.v7.widget.RecyclerView
+                                android:nestedScrollingEnabled="false"
                                     android:id="@+id/restaurant_images"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content">
 
 
                                 </android.support.v7.widget.RecyclerView>
-
-                            </RelativeLayout>
                         </android.support.design.widget.AppBarLayout>
 
 
                 </RelativeLayout>
                 <include layout="@layout/content_restaurant_view" />
             </FrameLayout>
-
-        </RelativeLayout>
 
     </android.support.v4.widget.NestedScrollView>
 
