--- a/app/src/main/res/layout/content_restaurant_view.xml
+++ b/app/src/main/res/layout/content_restaurant_view.xml
@@ -4,13 +4,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginTop="220dp"
     tools:context=".RestaurantViewActivity"> <!---tools:showIn="@layout/activity_restaurant_view" -->
 
     <android.support.v4.widget.NestedScrollView
+        android:descendantFocusability="blocksDescendants"
         android:id="@+id/restaurant_view_nested_scroll_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <RelativeLayout
+            android:descendantFocusability="blocksDescendants"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
@@ -22,7 +25,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp"
-                android:layout_marginTop="220dp"
                 android:layout_marginRight="5dp">
 
                 <RelativeLayout
@@ -309,10 +311,51 @@
             </android.support.v7.widget.CardView>
 
             <android.support.v7.widget.CardView
+                android:id="@+id/couponsSelectLayout"
+                android:layout_below="@id/into_card_restaurant"
+                android:layout_width="match_parent"
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="5dp"
+                android:layout_marginTop="10dp"
+                android:layout_height="wrap_content">
+
+                <RelativeLayout
+                    android:descendantFocusability="blocksDescendants"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10dp">
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:id="@+id/special_coupons_text"
+                        android:textSize="15sp"
+                        android:textStyle="bold"
+                        android:layout_marginTop="7dp"
+                        android:textColor="#363636"
+                        android:text="Special Coupons Available:"
+                        android:layout_height="wrap_content" />
+                    <android.support.v7.widget.RecyclerView
+                        android:layout_width="match_parent"
+                        android:descendantFocusability="blocksDescendants"
+                        android:id="@+id/special_coupons_recyclerView"
+                        android:layout_marginTop="7sp"
+                        android:textSize="14sp"
+                        android:clipToPadding="false"
+                        android:focusableInTouchMode="true"
+                        android:textColor="#000"
+                        android:lineSpacingExtra="3.8dp"
+                        android:layout_below="@id/special_coupons_text"
+                        android:layout_height="wrap_content" />
+
+                </RelativeLayout>
+
+            </android.support.v7.widget.CardView>
+
+            <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
                 android:id="@+id/critic_mood"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/into_card_restaurant"
+                android:layout_below="@id/couponsSelectLayout"
                 android:layout_marginLeft="5dp"
                 android:layout_marginRight="5dp"
                 android:layout_marginTop="10dp">
