--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,17 +7,21 @@
     android:theme="@style/EditTextTheme"
     tools:context=".LoginActivity">
 
-
-
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+    <ImageButton
+        android:id="@+id/exit_button"
+        android:padding="10dp"
+        android:layout_width="wrap_content"
+        android:src="@drawable/ic_back_navigte"
+        android:tint="#ff2f01"
+        android:foreground="?attr/selectableItemBackgroundBorderless"
+        android:background="@android:color/transparent"
+        android:layout_height="wrap_content" />
 
     <android.support.v4.widget.NestedScrollView
+        android:layout_marginTop="55dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
     <RelativeLayout
-        android:layout_marginTop="40dp"
         android:layout_marginStart="15dp"
         android:layout_marginEnd="15dp"
         android:layout_width="match_parent"
@@ -35,7 +39,7 @@
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/username_layout"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="16dp"
             android:layout_below="@id/login_header"
             android:layout_marginBottom="10dp"
             android:layout_width="match_parent"
@@ -118,8 +122,5 @@
     </RelativeLayout>
 
     </android.support.v4.widget.NestedScrollView>
-
-
-</FrameLayout>
 
 </android.support.design.widget.CoordinatorLayout>
