New features added

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -11,7 +11,7 @@
         android:id="@+id/exit_button"
         android:padding="15dp"
         android:layout_width="wrap_content"
-        android:src="@drawable/ic_back_navigte"
+        android:src="@drawable/ic_exit"
         android:tint="#ff2f01"
         android:foreground="?attr/selectableItemBackgroundBorderless"
         android:background="@android:color/transparent"
@@ -30,6 +30,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:textSize="19sp"
+            android:layout_marginStart="5dp"
             android:text="Login to RestroIN"
             android:fontFamily="@font/raleway"
             android:textStyle="bold"
@@ -100,6 +101,7 @@
             android:textColor="#3ca101"
             android:textStyle="bold"
             android:textSize="17sp"
+            android:fontFamily="@font/raleway"
             android:id="@+id/forgot_password"
             android:text="Forgot Password ? "
             android:layout_width="wrap_content"
