--- a/app/src/main/res/layout/activity_booking.xml
+++ b/app/src/main/res/layout/activity_booking.xml
@@ -3,25 +3,315 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:theme="@style/EditTextTheme"
     android:layout_height="match_parent"
     tools:context=".BookingActivity">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-
-        <com.stepstone.stepper.StepperLayout
-            app:ms_stepperType="tabs"
-            android:nestedScrollingEnabled="false"
-            app:ms_tabStepDividerWidth="40dp"
-            android:fitsSystemWindows="true"
-            android:id="@+id/booking_steppers"
-            android:layout_width="wrap_content"
+        <FrameLayout
+            android:background="#fff"
+            xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
             android:layout_height="match_parent">
 
+            <android.support.v4.widget.NestedScrollView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <android.support.v7.widget.CardView
+                        android:layout_marginBottom="10dp"
+                        app:cardElevation="3dp"
+                        app:cardCornerRadius="4dp"
+                        android:id="@+id/booking_details_cardView"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+                        <RelativeLayout
+                            android:layout_marginBottom="20sp"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content">
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:id="@+id/reserve_table_text"
+                                android:text="Reserve a Table"
+                                android:textSize="19sp"
+                                android:textColor="#363636"
+                                android:textStyle="bold"
+                                android:layout_centerHorizontal="true"
+                                android:layout_marginTop="15sp"
+                                android:layout_marginBottom="10sp"
+                                android:layout_marginStart="7dp"
+                                android:fontFamily="@font/raleway"
+                                android:layout_height="wrap_content" />
+
+                            <RelativeLayout
+                                android:layout_below="@id/reserve_table_text"
+                                android:layout_margin="10dp"
+                                android:id="@+id/choose_date"
+                                android:layout_width="match_parent"
+                                android:layout_height="24dp">
+
+                                <TextView
+                                    android:id="@+id/choose_date_text"
+                                    android:layout_width="wrap_content"
+                                    android:layout_centerVertical="true"
+                                    android:textStyle="bold"
+                                    android:textColor="#000"
+                                    android:fontFamily="@font/raleway"
+                                    android:text="Choose a date"
+                                    android:layout_height="wrap_content" />
+
+                                <View
+                                    android:layout_marginTop="2dp"
+                                    android:layout_width="wrap_content"
+                                    android:background="#b4b4b4"
+                                    android:layout_centerVertical="true"
+                                    android:layout_toEndOf="@id/choose_date_text"
+                                    android:layout_height="1dp" />
+
+                            </RelativeLayout>
+
+                            <RelativeLayout
+                                android:layout_below="@id/choose_date"
+                                android:id="@+id/dates_recycler_layout"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content">
+
+                                <android.support.v7.widget.RecyclerView
+                                    android:layout_marginStart="5dp"
+                                    android:id="@+id/dates_recycler"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content">
+
+                                </android.support.v7.widget.RecyclerView>
 
 
-        </com.stepstone.stepper.StepperLayout>
+                            </RelativeLayout>
+
+                            <RelativeLayout
+                                android:layout_margin="10dp"
+                                android:layout_below="@id/dates_recycler_layout"
+                                android:id="@+id/choose_people"
+                                android:layout_width="match_parent"
+                                android:layout_height="24dp">
+
+                                <TextView
+                                    android:id="@+id/number_of_people_text"
+                                    android:layout_width="wrap_content"
+                                    android:layout_centerVertical="true"
+                                    android:textStyle="bold"
+                                    android:textColor="#000"
+                                    android:fontFamily="@font/raleway"
+                                    android:text="Number of People"
+                                    android:layout_height="wrap_content" />
+
+                                <View
+                                    android:layout_marginTop="2dp"
+                                    android:layout_width="wrap_content"
+                                    android:background="#b4b4b4"
+                                    android:layout_centerVertical="true"
+                                    android:layout_toEndOf="@id/number_of_people_text"
+                                    android:layout_height="1dp" />
+
+                            </RelativeLayout>
+
+                            <RelativeLayout
+                                android:layout_below="@id/choose_people"
+                                android:id="@+id/people_recycler_layout"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content">
+
+                                <android.support.v7.widget.RecyclerView
+                                    android:layout_marginStart="5dp"
+                                    android:id="@+id/people_recycler"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content">
+
+                                </android.support.v7.widget.RecyclerView>
+
+                            </RelativeLayout>
+
+                            <RelativeLayout
+                                android:layout_margin="10dp"
+                                android:layout_below="@id/people_recycler_layout"
+                                android:id="@+id/booking_time_layout"
+                                android:layout_width="match_parent"
+                                android:layout_height="24dp">
+
+                                <TextView
+                                    android:id="@+id/booking_time_text"
+                                    android:layout_width="wrap_content"
+                                    android:layout_centerVertical="true"
+                                    android:textStyle="bold"
+                                    android:textColor="#000"
+                                    android:fontFamily="@font/raleway"
+                                    android:text="Time of Arrival"
+                                    android:layout_height="wrap_content" />
+
+                                <View
+                                    android:layout_marginTop="2dp"
+                                    android:layout_width="wrap_content"
+                                    android:background="#b4b4b4"
+                                    android:layout_centerVertical="true"
+                                    android:layout_toEndOf="@id/booking_time_text"
+                                    android:layout_height="1dp" />
+
+                            </RelativeLayout>
+
+                            <RelativeLayout
+                                android:layout_below="@id/booking_time_layout"
+                                android:id="@+id/time_recycler_layout"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content">
+
+                                <android.support.v7.widget.RecyclerView
+                                    android:layout_marginStart="5dp"
+                                    android:id="@+id/time_recycler"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content">
+
+                                </android.support.v7.widget.RecyclerView>
+
+                            </RelativeLayout>
+
+                        </RelativeLayout>
+
+
+                    </android.support.v7.widget.CardView>
+
+                    <android.support.v7.widget.CardView
+                        android:layout_marginTop="10dp"
+                        android:layout_marginBottom="10dp"
+                        app:cardElevation="3dp"
+                        app:cardCornerRadius="4dp"
+                        android:id="@+id/guest_details_cardView"
+                        android:layout_below="@id/booking_details_cardView"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+                        <RelativeLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content">
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_centerHorizontal="true"
+                                android:text="Guest Details"
+                                android:id="@+id/guest_details_text"
+                                android:fontFamily="@font/raleway"
+                                android:textSize="19sp"
+                                android:layout_margin="5dp"
+                                android:textStyle="bold"
+                                android:textColor="#363636"
+                                android:layout_height="wrap_content" />
+
+                            <android.support.design.widget.TextInputLayout
+                                android:layout_width="match_parent"
+                                android:layout_margin="6dp"
+                                android:layout_below="@id/guest_details_text"
+                                android:id="@+id/guest_name_layout"
+                                android:layout_height="60dp">
+
+                                <android.support.design.widget.TextInputEditText
+                                    android:layout_width="match_parent"
+                                    android:hint="Guest Name"
+                                    android:id="@+id/guest_name"
+                                    android:theme="@style/EditTextTheme"
+                                    style="@style/EditTextTheme"
+                                    android:textColorHint="#363636"
+                                    android:textStyle="bold"
+                                    android:fontFamily="@font/raleway"
+                                    android:textColor="#363636"
+                                    android:inputType="text"
+                                    android:text="Chethan Jagannatha Kulkarni"
+                                    android:layout_height="match_parent" />
+
+                            </android.support.design.widget.TextInputLayout>
+
+                            <android.support.design.widget.TextInputLayout
+                                android:layout_width="match_parent"
+                                android:layout_margin="6dp"
+                                android:layout_below="@id/guest_name_layout"
+                                android:id="@+id/guest_email_layout"
+                                android:layout_height="60dp">
+
+                                <android.support.design.widget.TextInputEditText
+                                    android:layout_width="match_parent"
+                                    android:hint="Guest Email"
+                                    android:theme="@style/EditTextTheme"
+                                    style="@style/EditTextTheme"
+                                    android:textColorHint="#363636"
+                                    android:textStyle="bold"
+                                    android:fontFamily="@font/raleway"
+                                    android:textColor="#363636"
+                                    android:id="@+id/guest_email"
+                                    android:focusable="false"
+                                    android:enabled="false"
+                                    android:clickable="false"
+                                    android:inputType="textEmailAddress"
+                                    android:text="chethanjkulkarni@gmail.com"
+                                    android:layout_height="match_parent" />
+
+                            </android.support.design.widget.TextInputLayout>
+
+                            <android.support.design.widget.TextInputLayout
+                                android:layout_width="match_parent"
+                                android:layout_margin="6dp"
+                                android:layout_below="@id/guest_email_layout"
+                                android:id="@+id/guest_number_layout"
+                                android:layout_height="60dp">
+
+                                <android.support.design.widget.TextInputEditText
+                                    android:layout_width="match_parent"
+                                    android:hint="Guest Phone"
+                                    android:id="@+id/guest_number"
+                                    android:inputType="number"
+                                    android:textColorHint="#363636"
+                                    android:textStyle="bold"
+                                    android:fontFamily="@font/raleway"
+                                    android:theme="@style/EditTextTheme"
+                                    style="@style/EditTextTheme"
+                                    android:textColor="#363636"
+                                    android:focusable="false"
+                                    android:enabled="false"
+                                    android:clickable="false"
+                                    android:text="9110466718"
+                                    android:layout_height="match_parent" />
+
+                            </android.support.design.widget.TextInputLayout>
+
+                            <Button
+                                android:layout_width="match_parent"
+                                android:layout_marginStart="6dp"
+                                android:layout_marginEnd="6dp"
+                                android:layout_marginTop="4dp"
+                                android:layout_marginBottom="15dp"
+                                android:text="Reserve Now"
+                                android:background="@drawable/button_background_orange"
+                                android:fontFamily="@font/raleway"
+                                android:textStyle="bold"
+                                android:textColor="#fff"
+                                android:foreground="?attr/selectableItemBackground"
+                                android:layout_below="@id/guest_number_layout"
+                                android:layout_height="wrap_content" />
+
+                        </RelativeLayout>
+
+                    </android.support.v7.widget.CardView>
+
+                </RelativeLayout>
+
+            </android.support.v4.widget.NestedScrollView>
+
+
+
+        </FrameLayout>
 
     </RelativeLayout>
 
