--- a/app/src/main/res/layout/layout_dates_view.xml
+++ b/app/src/main/res/layout/layout_dates_view.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="140dp"
+    android:layout_width="120dp"
+    android:layout_height="90dp"
     app:cardElevation="2dp"
     android:layout_margin="5dp"
     app:cardCornerRadius="4dp"
-    android:layout_height="100dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <RelativeLayout
@@ -23,6 +23,7 @@
             android:layout_width="30dp"
             android:layout_marginStart="5dp"
             android:layout_marginTop="5dp"
+            app:duration="500"
             app:color_checked="@color/colorPrimary"
             android:id="@+id/date_smooth_checkbox"
             android:layout_height="30dp" />
